# author

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yaml  shell.nix
.github/workflows/: build.yaml  pull-request.yaml
migrations/2022-09-23-085045_create_users/: up.sql
migrations/2022-09-30-011452_update_users_haschannel/: down.sql  up.sql
migrations/2022-10-08-075026_subscription_channel/: up.sql
migrations/2022-10-09-041313_update_subscription/: down.sql  up.sql
migrations/2022-10-12-124811_invoice_id/: down.sql  up.sql
migrations/2022-10-24-023158_channels_name_subscriptions/: down.sql  up.sql
migrations/2022-11-26-022029_subscription_merchant_code/: down.sql  up.sql
migrations/2022-11-28-035726_subscription_column_removal/: down.sql  up.sql
migrations/2022-12-07-094644_subscription/: down.sql  up.sql
migrations/2023-05-01-041917_users/: up.sql
migrations/2023-05-22-030400_checkbots/: down.sql  up.sql
migrations/2023-05-22-030400_prompts/: down.sql  up.sql
migrations/2023-05-23-091526_balance/: down.sql  up.sql
migrations/2023-05-24-032251_balance_logs/: down.sql  up.sql
migrations/2023-05-24-032251_topup/: down.sql  up.sql
migrations/2023-07-03-081926_ori_text/: down.sql  up.sql
migrations/2023-07-13-032559_referral/: down.sql  up.sql
migrations/2023-07-16-065701_document/: up.sql
migrations/2023-07-21-011535_instruction/: down.sql  up.sql
migrations/2023-08-09-065130_subscriptions/: up.sql
migrations/2023-08-10-035634_topup_type/: down.sql  up.sql
migrations/2023-12-04-004654_drop_document_and_referral/: down.sql  up.sql
migrations/2024-01-04-123216_paylater/: down.sql  up.sql
migrations/2024-02-02-003319_document/: up.sql
migrations/2024-02-03-115215_document_update/: down.sql  up.sql
migrations/2024-03-16-021101_prompt_type/: down.sql  up.sql
migrations/2024-04-04-033235_drop_document/: down.sql  up.sql
migrations/2024-04-04-033730_students/: up.sql
migrations/2024-07-11-024844_updated_at/: down.sql  up.sql
migrations/2024-07-25-031038_subscriptions/: down.sql  up.sql
migrations/2024-07-25-063913_students/: down.sql  up.sql
migrations/2024-07-26-072854_balance/: down.sql  up.sql
migrations/2024-10-14-004607_checkbot/: down.sql  up.sql
migrations/2024-10-16-054041_translation/: down.sql  up.sql
migrations/2024-10-16-081628_speech_to_text/: down.sql  up.sql
migrations/2024-10-19-030222_text_to_speech/: down.sql  up.sql
src/: db.rs  http_error.rs  main.rs  schema.rs  server.rs
src/bps/: mod.rs  (+1 more)
(+184 files in other folders)
