[package]
name = "author"
version = "1.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.5"
actix-web = { version = "4", features = ["openssl"] }
bcrypt = "0.14.0"
chrono = { version ="0.4.38", features= ["serde"] }
dotenv = "0.15"
diesel = { version = "2.1.6", features = ["postgres", "uuid", "r2d2", "chrono"] }
jsonwebtoken = "8.3.0"
openssl = { version = "0.10", features = ["vendored"] }
sentry = "0.32.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.7", features = ["serde", "v4"] }
r2d2 = "0.8.9"
regex = "1.8.1"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
